<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".SignIn" >

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_toRightOf="@+id/userName"
        android:text="@string/year"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/year"
        android:layout_alignParentRight="true"
        android:text="@string/owner"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/calcysgpa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:text="@string/cal_y_gpa"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userName"
        android:layout_centerVertical="true"
        android:text="@string/name"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/owner"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:background="#9932CC"
        android:onClick="signIn"
        android:padding="15dip"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/exception_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/exception_name" 
        android:textColor="#000000"/>

</RelativeLayout>