<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Calculator" >

    <Button
        android:id="@+id/calculate"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="#00BFFF"
        android:padding="15dip"
        android:text="@string/calculate"
        android:textColor="#FFFFFF"
        android:textSize="17sp" 
        android:onClick="calculate"/>

    <EditText
        android:id="@+id/credit9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/point9"
        android:layout_alignBottom="@+id/point9"
        android:layout_toRightOf="@+id/calculate"
        android:ems="3"
        android:inputType="number"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/EditText05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/point9"
        android:layout_alignLeft="@+id/point9"
        android:ems="3"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/credit8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/credit9"
        android:layout_alignLeft="@+id/credit9"
        android:ems="3"
        android:inputType="number"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/point8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/credit8"
        android:layout_alignBottom="@+id/credit8"
        android:layout_toLeftOf="@+id/calculate"
        android:ems="3"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/point7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/point8"
        android:layout_toLeftOf="@+id/calculate"
        android:ems="3"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/credit7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/point7"
        android:layout_alignBottom="@+id/point7"
        android:layout_alignLeft="@+id/credit8"
        android:ems="3"
        android:inputType="number"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/credit6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/credit7"
        android:layout_toRightOf="@+id/calculate"
        android:ems="3"
        android:inputType="number" 
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/point6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/point7"
        android:layout_toLeftOf="@+id/calculate"
        android:ems="3"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/credit5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/credit6"
        android:layout_alignLeft="@+id/credit6"
        android:ems="3"
        android:inputType="number"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/point5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/point6"
        android:layout_toLeftOf="@+id/calculate"
        android:ems="3"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/point4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/point5"
        android:layout_toLeftOf="@+id/calculate"
        android:ems="3"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/credit4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/credit5"
        android:layout_toRightOf="@+id/calculate"
        android:ems="3"
        android:inputType="number"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/point3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/point4"
        android:layout_toLeftOf="@+id/calculate"
        android:ems="3"
        android:inputType="numberDecimal" 
        android:textColor="#FFFFFF"  />

    <EditText
        android:id="@+id/credit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/credit4"
        android:layout_toRightOf="@+id/calculate"
        android:ems="3"
        android:inputType="number"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/credit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/credit3"
        android:layout_toRightOf="@+id/calculate"
        android:ems="3"
        android:inputType="number"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/point2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/credit2"
        android:layout_alignBottom="@+id/credit2"
        android:layout_toLeftOf="@+id/calculate"
        android:ems="3"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/point1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/point2"
        android:layout_alignLeft="@+id/point2"
        android:ems="3"
        android:inputType="numberDecimal" 
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/credit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/credit2"
        android:layout_alignLeft="@+id/credit2"
        android:ems="3"
        android:inputType="number"
        android:textColor="#FFFFFF" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/point9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/calculate"
        android:layout_marginBottom="15dp"
        android:layout_toLeftOf="@+id/calculate"
        android:ems="3"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/points"
        android:layout_alignBottom="@+id/points"
        android:layout_toRightOf="@+id/calculate"
        android:text="@string/credits"
        android:textSize="17sp"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/point1"
        android:layout_alignLeft="@+id/point1"
        android:text="@string/points"
        android:textSize="17sp"
        android:textColor="#FFFFFF"  />

    <TextView
        android:id="@+id/dIError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/calculate"
        android:layout_centerHorizontal="true"
        android:text="@string/datInError" 
        android:textSize="13sp" 
        android:textColor="#000000" />

    <Button
        android:id="@+id/clear"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/credit5"
        android:layout_centerHorizontal="true"
        android:text="@string/clear"
        android:background="#9932CC"
        android:textColor="#FFFFFF"
        android:onClick="clearAll"
         />

</RelativeLayout>